fix gap

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 5px;
+    gap: 25px;
 }
 
 .download {
